<resources>
    <string name="app_name">Clinica local</string>
    <string name="Tittle_inicio"> Bienvenido</string>
    <string name="txt_ingresCampos">Accede con tu usuario y contraseña</string>
    <string name="string_NumSeguro">Numero de seguro</string>
    <string name="Tittle_AltasCita">AGENDAR CITA</string>
    <string name="Text_bntEntrar">ENTRAR</string>
    <string name="Tittle_PagInicio">HOLA DE NUEVO</string>
    <string name="boton_citas">Agendar nueva cita</string>
    <string name="txt_afiliados">Miembros de la poliza</string>
    <string name="txt_verCitas">Consultar citas</string>
    <string name="txt_hoyHacer">¿Que vamos a hacer hoy?</string>
    <string name="txt_Gestionarafiliados">Gestionar miembros\nde la poliza</string>
    <string name="txt_Doctor">Doctor</string>
    <string name="txt_fecha">Fecha a agendar</string>
    <string name="txt_hora">Hora a solicitar</string>
    <string name="txt_motivo">Motivo de consulta</string>
    <string name="txt_estado">Estado actual</string>
    <string name="txt_Nombres">Nombres</string>
    <string name="txt_PAP">Primer apellido</string>
    <string name="txt_SAP">Segundo apellido</string>
    <string name="txt_fechNaci">Fecha de nacimiento</string>
    <string name="txt_Parentezco">Parentezco</string>
    <string name="txt_agendarCit">Agendar</string>
    <string name="txt_agenAfil">Seleccionar Paciente</string>
    <string name="txt_restore">Restaurar datos por defecto</string>
    <string name="txt_cambiosCit">Modificar cita</string>

    <string name="Tittle_ConsultCit">BUSCAR CITAS</string>
    <string name="txt_estadoCit">Estado de la cita</string>
    <string name="txt_NameDoc">Nombre del doctor</string>
    <string name="txt_ResultCit">Resultados de la busqueda</string>
    <string name="txtbtn_Buscar">Buscar</string>

    <string name="Tittle_ModifCita">Paso 1</string>
    <string name="txt_buscarCita">Buscar cita</string>
    <string name="txt_NomPac">Nombre del paciente</string>
    <string name="txt_intoID">ID de la cita a modificar</string>
    <string name="btn_cargar">Cargar Cita</string>
    <string name="txt_intruccion1">Selecciona la cita a modificar\nen base a la lista de resultados</string>
    <string name="Paso2">Paso 2</string>

    <string name="TittleModCita">REAGENDAR CITA</string>

    <string name="TittleModCitaSelet">REAGENDAR CITA SELECCIONADA</string>
    <string name="txt_showDescripCita">Detalles de la cita</string>
    <string name="txt_DoctorCitMod">Doctor</string>
    <string name="txt_PacienteCitMod">Paciente</string>
    <string name="txt_motCitMod">Motivo</string>
    <string name="txt_FechCitMod">Cambiar fecha</string>
    <string name="txt_HoraCitMod">Cambiar hora</string>
    <string name="txt_saveCambios">Guardar cambios</string>
    <string name="txt_DetModificables">Reagendar fecha y hora</string>

    <string name="Tittle_GestionAfil">Gestionar miembros\nde la poliza de seguro</string>
    <string name="txtbtn_addAfiliado">Añadir nuevo mienbro</string>

    <string name="Tittle_addAfiliado">Añadir miembro</string>
    <string name="txt_NombresAfil">Nombres</string>
    <string name="txt_PrimerAPAfil">Primer apellido</string>
    <string name="txt_SegApAfil">Segundo apellido</string>
    <string name="txt_parentezcoAfil">Parentezco</string>
    <string name="txtbtn_addAfil">Añadir afiliado</string>

    <string name="txt_busqForPac">Nombre del paciente</string>

    <string name="tittle_windowModif">Reagendar a  </string>
    <string name="txt_fechReagend">Fecha</string>
    <string name="txt_horReagen">Hora</string>

    <string-array name="SP_Doctores">
        <item>Ana Maria Garcia López</item>
        <item>Juan Carlos Pérez Martinez</item>
        <item>Sofia Hernández Ramos</item>
        <item>Luis Alberto Diaz Sánchez</item>
        <item>Felipe Blanco Guzmán</item>
        <item>Natalia Rojas Marín</item>
    </string-array>

    <string-array name="SP_EstadoCita">
        <item>Completada</item>
        <item>Programada</item>
        <item>Reprogramada</item>
        <item>Cancelada</item>
    </string-array>

    <string-array name="SP_Parentezco">
        <item>Seleccionar</item>
        <item>Conyuge</item>
        <item>Hermano/a</item>
        <item>Hijo/a</item>
        <item>Madre</item>
        <item>Padre</item>
        <item>Tio/a</item>
        <item>Primo/a</item>
        <item>Abuelo/a</item>
    </string-array>
</resources>