<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="134dp"
        android:text="@string/Tittle_addAfiliado"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_PrimerAPAfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="134dp"
        android:text="@string/txt_NombresAfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_parentezcoAfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_SegApAfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <EditText
        android:id="@+id/txtNombresAfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="96dp"
        android:digits="abcdefghijklmnñopqrstuvwxyáéíóúzABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ "
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/txtPAPAfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="96dp"
        android:digits="abcdefghijklmnñopqrstuvwxyáéíóúzABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ "
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/txtNombresAfil" />

    <EditText
        android:id="@+id/txtSAPAfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:digits="abcdefghijklmnñopqrstuvwxyáéíóúzABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ "
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/txtPAPAfil" />

    <Spinner
        android:id="@+id/SPParentez"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/txtSAPAfil" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:onClick="addAfil"
        android:text="@string/txtbtn_addAfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SPParentez" />

</androidx.constraintlayout.widget.ConstraintLayout>