<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/SPEstadoCit"
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="150dp"
        android:text="@string/Tittle_ConsultCit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RBGBusqueda"
        android:layout_width="154dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/RBBusqCitEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_estadoCit" />

        <RadioButton
            android:id="@+id/RBBusqCitNomDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_NameDoc" />
    </RadioGroup>

    <Spinner
        android:id="@+id/SPNomDoc"
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SPEstadoCit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ResultBusqCit"
        android:layout_width="360dp"
        android:layout_height="365dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txt_ResultCit"
        app:layout_constraintBottom_toTopOf="@+id/ResultBusqCit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnBuscarCit"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="169dp"
        android:onClick="buscarCita"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RBGBusqueda"
        app:srcCompat="@drawable/buscar" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="184dp"
        android:onClick="buscarCita"
        android:text="@string/txtbtn_Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarCit" />

</androidx.constraintlayout.widget.ConstraintLayout>