<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="124dp"
        android:text="@string/Tittle_ModifCita"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="73dp"
        android:text="@string/txt_buscarCita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_NomPac"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="110dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="183dp"
        android:layout_height="27dp"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_LoadCit"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="152dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="403dp"
        android:layout_height="294dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="436dp" />
</androidx.constraintlayout.widget.ConstraintLayout>